1.0.2 tried to fix scrollbar

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 html {
     overflow-x: hidden;
-    overflow-y: visible;
+    overflow-y: hidden;
 }
 body {
     position: relative;
